fix - Add logo image and align header and results

--- a/root/frontend/src/pages/SearchResultsView/SearchResultsView.css
+++ b/root/frontend/src/pages/SearchResultsView/SearchResultsView.css
@@ -1,12 +1,4 @@
-.wrapper {
-  width: 100%; 
-  height: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
-
-.container {
+.main {
   width: 100%;
   height: 100%;
   display: flex;
@@ -15,20 +7,36 @@
   align-items: center;
 }
 
-.srv-header {
-  min-width: 100%;
+.header {
+  width: 1200px;
+  max-width: 100%;
   height: 200px;
+  padding: 0px;
+  margin: 50px auto;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
 }
 
-.srv-lists-button {
+.logo-wrapper {
+  height: 100%;
+  width: auto;
+  margin: 10px 0px;
+}
+.anime-noto {
+  max-height: 100%;
+  width: auto;
+  object-fit: contain;
+}
+
+.lists-button {
   align-self: flex-start;
   cursor: pointer;
 }
-
-.srv-searchbar {
+.searchbar-wrapper {
+  align-self: flex-end;
+}
+.searchbar-term {
   margin: auto;
   text-align: center;
 }
@@ -40,10 +48,10 @@
   top: -8px;
 }
 
-.srv-results-container {
+.results-container {
   height: 100%;
   width: 1255px;
-  margin: 0px 250px; 
+  margin: 0px 250px;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
